<u>를 `로 수정: github markdown에 맞게.

--- a/02_정당과 역사.md
+++ b/02_정당과 역사.md
@@ -52,7 +52,7 @@
 이는 사민주의 정당으로서 장점이자 단점으로 작용하고 있다. 장점이라면, 국회를 비롯한 중앙정치에서 목소리의 영향력이 제일 크다는 것이다. 민주당계, 보수주류, 보수적 제3세력 정당들과의 협상을 통해 주요 의제를 관철시킬 수 있고, 중앙정치에서 사회적 약자가 대변되는 몇 안되는 창구 역할을 한다. 2016-2020 국회에서 어렵게 통과시킨 산업안전보건법 개정안(통칭 '김용균법'), 공직선거법 개정안 등이 그 성과이다. 하지만 인적 구성의 폭이 넓은 것은 단점도 된다. 이슈에 따라 당내 여론이 다양하여 갈등이 생길 수 있고, 정당과의 협상에 참여하는 과정에서 '소수정당임에도 지지해야 하는 이유'인 독창적 정체성을 잃을 수 있다는 것이다. 조국 전 법무부장관 임명 국면에서, 이 이슈를 바라보는 관점(검찰개혁과 사회불평등의 문제)을 놓고 당내 갈등이 깊어져 당 차원의 입장을 보여주지 못한 것이 그 예시이다. 
 
 ### 민중당 - 민족주의 좌파정당
-2015년에 창당(당시 이름 '민중연합당')한 민중당의 전신에 대해서는 의견이 다양하지만, 당 지도부나 공직선거 후보의 많은 수가 과거 <u>통합진보당(2011년에 창당되었으며, 2012년 총선의 당내 비례대표 후보 경선에서 정파별 부정선거 문제의 처리를 두고 입장이 갈라져서, 현재의 정의당과 분당되었다. 내란선동 혐의로 유죄판결을 받은 이석기 의원 문제와 당헌에 적힌 '진보적 민주주의'가 북한체제의 이론과 유사하다는 석연찮은 이유로 인해, 2014년 박근혜 행정부가 정당해산을 청구하고 헌법재판소가 이를 받아들이며 강제해산된다.)</u> 출신이다. 이들은 민주노동당 시절부터 지역구 단위로 주민조직이나 시민운동세력과 밀착하는 방식으로 활동했고, 이는 민주노총(전국민주노동조합총연맹), 전농(전국농민회총연맹) 등 규모가 큰 전국단위 조직에서 민중당 지지세를 키우는 데에 도움이 되었다. 따라서 민중당은 중앙정치에서의 열세와 무관하게 지역구 선거, 특히 대기업 생산직 노동자와 농민이 많은 지역구에서 강세를 보였다. 
+2015년에 창당(당시 이름 '민중연합당')한 민중당의 전신에 대해서는 의견이 다양하지만, 당 지도부나 공직선거 후보의 많은 수가 과거 `통합진보당(2011년에 창당되었으며, 2012년 총선의 당내 비례대표 후보 경선에서 정파별 부정선거 문제의 처리를 두고 입장이 갈라져서, 현재의 정의당과 분당되었다. 내란선동 혐의로 유죄판결을 받은 이석기 의원 문제와 당헌에 적힌 '진보적 민주주의'가 북한체제의 이론과 유사하다는 석연찮은 이유로 인해, 2014년 박근혜 행정부가 정당해산을 청구하고 헌법재판소가 이를 받아들이며 강제해산된다.)` 출신이다. 이들은 민주노동당 시절부터 지역구 단위로 주민조직이나 시민운동세력과 밀착하는 방식으로 활동했고, 이는 민주노총(전국민주노동조합총연맹), 전농(전국농민회총연맹) 등 규모가 큰 전국단위 조직에서 민중당 지지세를 키우는 데에 도움이 되었다. 따라서 민중당은 중앙정치에서의 열세와 무관하게 지역구 선거, 특히 대기업 생산직 노동자와 농민이 많은 지역구에서 강세를 보였다. 
 2012년 총선에서 전국구급 유명 정치인(노회찬, 심상정) 이외에 지역구 당선자를 내지 못했던 정의당계 정파와 달리, 민중당계 정파는 지역구 당선자를 4명(이상규: 서울 관악구 을, 김미희: 경기 성남시 중원구, 오병윤: 광주 서구 을, 김선동: 전남 순천시-곡성군)이나 배출했다. 2016년에 당선되고 훗날 민중당에 입당하는 2명의 무소속 의원(김종훈: 울산 동구, 윤종오: 울산 북구) 역시 민주노총 지지 후보단일화 경선에서 정의당, 노동당 후보에게 승리했다. 그러나 중앙정계에서 민중당의 가장 큰 약점은, 80년대부터 지속된 정파 특유의 외교통일 분야 입장이다. 반전(反戰)평화 가치를 진보정당 중에서 가장 적극적으로 내세우지만, 그러나 주변 정세와 무관하게 민족주의적 축면에서 주한미군 철수와 남북교류 확대를 주요 의제로 내세운 점, 특히 2000년대 북한의 핵개발을 자기방어적 조치로 이해한다는 입장을 보인 것이 진보정당 전체의 지지확장에 두고두고 걸림돌이 되는 실정이다.
 
 ### 노동당 - 선명 사민주의 정당
