--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -75,7 +75,7 @@
 
 
 ## 행정부 운영, 예산 및 경제 관련
-행정부 공무원이 일을 하려면 세 가지가 반드시 필요하다. 조직, 인력, 예산. 이 모든 것은 국회가 질의와 감사와 토론과 입법을 거쳐 편성하므로, 관련 위원회에 속한 의원 1명의 역할이 매우 중요하다.
+**행정부 공무원이 일을 하려면 세 가지가 반드시 필요하다. 조직, 인력, 예산. 이 모든 것은 국회가 질의와 감사와 토론과 입법을 거쳐 편성하므로, 관련 위원회에 속한 의원 1명의 역할이 매우 중요하다.**
 
 ### 정무위원회(정무위)
 정무위원회는 국무총리가 장관을 거치지 않고 직접 관할하는 중앙정부 부처 대부분과 관련된 사항을 논의한다. 한국의 국무총리는 보통 대통령이나 각부 장관에 밀려서 많은 실권을 가지지 못한다. 따라서 정무위가 다루는 주요 이슈는, 큰 사건이 언제나 터져나오는 정계에서 중요한 논쟁거리가 되기는 어렵다. 그러나 대형 재난이나 국가적 이벤트, 사회 전반에 영향을 끼치는 사건 등등 여러 부처가 범정부적으로 대응해야 하는 이슈가 생길 때, 국무총리가 모든 부처를 모아서 전체적인 대응을 주도한다. 따라서 정무위는 행정부가 빠르게 많은 자원을 투입해야 하는 긴급한 사안들을 다루는 일이 많다.
@@ -97,7 +97,7 @@
 (ps: 행안위가 담당하는 세 번째 기관은 중앙선거관리위원회다. 입후보부터 개표까지의 선거관리 전 과정, 불법선거 단속 및 선거홍보 등을 맡는 기관이다. 그렇다. 지금 여러분이 읽고 있는 이 책도 중앙선관위의 체계적인 행정력 없이는 만들어지지 못했을 것이다.)
 
 ### 예산결산특별위원회(예결위)
-예산결산특별위원회는 중앙정부의 예산안, 기금운용계획안, 세입세출결산 및 기금결산을 비롯한 재정 사용을 인준하고 감시한다. 국회는 매년 6월부터 8월까지 작년도 재정수입·지출이 예산안에 맞게 잘 집행되었나 심사하는 결산을 진행하고, 9월부터 <u>12월까지(〈대한민국헌법〉 제54조2항에 의해 국회는 예산안을 전년도 12월 2일까지 통과시켜야 한다. 그러나 예산안을 놓고 진행되는 각종 협상과 논쟁 때문에 이 기한은 잘 지켜지지 않는다. 2020년도 예산안은 2019년 12월 10일에 본회의를 통과했다.)</u> 내년도 재정수입·지출 계획을 담은 예산안을 심사한다. 먼저 상임위가 자신이 담당하는 정부부처의 결산·예산안 심사를 진행하고, 예결위는 그 결과를 수합하여 전체적인 심사를 진행한다. 또한 국회법(제83조의2)에 따라 재정 관련 법률안이나 '대규모 예산·기금 조치를 수반하는 법률안'은 담당 상임위와 예결위가 반드시 협의를 거쳐야 한다. 뿐만 아니라, 연도 중간에 대규모 재해나 경기침체에 따라 추가로 편성하는 예산(추가경정예산)안이 올라오면 그것의 심사도 담당한다. 
+예산결산특별위원회는 중앙정부의 예산안, 기금운용계획안, 세입세출결산 및 기금결산을 비롯한 재정 사용을 인준하고 감시한다. 국회는 매년 6월부터 8월까지 작년도 재정수입·지출이 예산안에 맞게 잘 집행되었나 심사하는 결산을 진행하고, 9월부터 `12월까지(〈대한민국헌법〉 제54조2항에 의해 국회는 예산안을 전년도 12월 2일까지 통과시켜야 한다. 그러나 예산안을 놓고 진행되는 각종 협상과 논쟁 때문에 이 기한은 잘 지켜지지 않는다. 2020년도 예산안은 2019년 12월 10일에 본회의를 통과했다.)` 내년도 재정수입·지출 계획을 담은 예산안을 심사한다. 먼저 상임위가 자신이 담당하는 정부부처의 결산·예산안 심사를 진행하고, 예결위는 그 결과를 수합하여 전체적인 심사를 진행한다. 또한 국회법(제83조의2)에 따라 재정 관련 법률안이나 '대규모 예산·기금 조치를 수반하는 법률안'은 담당 상임위와 예결위가 반드시 협의를 거쳐야 한다. 뿐만 아니라, 연도 중간에 대규모 재해나 경기침체에 따라 추가로 편성하는 예산(추가경정예산)안이 올라오면 그것의 심사도 담당한다. 
 
 다른 특별위원회와 달리, 예결위는 의원들이 돌아가며 50명씩 1년간 임기를 맡는 형식으로 상시 운영된다. 예결위 소속 의원은 매우 많은 업무를 맡는 만큼 권한이 상당하다. 정부가 재정을 투입한 수천 수만가지 세부사업의 예결산을 모두 살펴야 하는데, 그 규모가 1년에 약 500조 원, 의원 1인당 10조(=100,000억)원에 달하므로 격무에 시달린다. 반대로 의원 본인이 관심있는 분야의 예산을 더 챙길 수 있는 장점이 있다. 특히 자기의 지지기반인 특정 지역구나 계층 사람들이 수혜를 받는 사업의 필요성을 역설하고 예산을 늘리도록 행정부와 동료 의원들을 설득할 힘을 가진다. 이것이 너무 즉흥적으로 이뤄지면, 심사회의 도중에 예산 증액을 부탁하는 메모를 의원끼리 마구 주고받는 '쪽지예산'의 풍경을 볼 수 있다. 그러나 이것도 각 지역구와 계층의 이익을 놓고 협상하여 서로 만족하는 합의를 이끌어내는 과정이라고 여긴다면, 해당 집단의 이익을 대변할 사람 1명을 예결위에 소속시키는 것은 민주주의에서 매우 중요한 일이다. 
 
@@ -116,13 +116,13 @@
 
 #### 지방분권 강화와 민주당계 정당
 문재인 행정부는 취임 초부터 지방정부와 지방의회에 더 많은 권한을 부여하는 지방분권 강화 행보를 보여왔다. 지방분권 강화는 민주당계 정당의 오랜 주장이었다. 2010년대에 보수주류 정당이 중앙에서 집권할 동안, 민주당 출신 지방자치단체장은 자체적으로 여러가지 정책을 실험했다. 이 중에서 성공적으로 자리잡은 행정, 복지정책(청년기본소득제, 노인 대상 의료기구 시술비 지원 등) 등이 민주당의 전국 공약으로 확대되었고, 현재의 중앙정부에도 영향을 미쳤다. 
-문재인 행정부가 현재 추진하는 지방분권은, 지방정부가 중앙정부의 개입 없이도 자체적으로 정책을 제안하고 추진할 수 있는 운신의 폭을 넓히는 것이다. 이는 중앙정부의 권한, 특히 예산과 인사권을 많이 양보하는 입법내용을 포함한다. <u>국세와 지방세(세금은 크게 중앙정부 예산으로 들어가는 국세와, 지방정부 예산으로 들어가는 지방세로 나뉜다. 예를 들어 여러분이 연말정산이나 종합소득세 납부를 실행할 때 보면, 여러분이 내는 소득세는 국세인 '소득세'와 지방세인 '지방소득세'로 나뉘어져 있다.)</u>의 비율을 8:2에서 7:3 수준으로 조정한다던가, 지방공무원의 인사제도에 중앙정부가 개입할 여지를 줄인다던가, 지방예산 편성 과정에 주민제안이 반드시 들어가도록 하는 '주민참여예산' 제도를 전국적으로 시행하는 등의 내용이 포함된다. 이러한 조치는 각 지방마다 행정부·의회와 주민자치의 역량에 따라 매우 긍정적이거나 부정적인 상황을 만들 것이라서, 실제 입법과정에서 오랜 토론을 거칠 것이다.
+문재인 행정부가 현재 추진하는 지방분권은, 지방정부가 중앙정부의 개입 없이도 자체적으로 정책을 제안하고 추진할 수 있는 운신의 폭을 넓히는 것이다. 이는 중앙정부의 권한, 특히 예산과 인사권을 많이 양보하는 입법내용을 포함한다. `국세와 지방세(세금은 크게 중앙정부 예산으로 들어가는 국세와, 지방정부 예산으로 들어가는 지방세로 나뉜다. 예를 들어 여러분이 연말정산이나 종합소득세 납부를 실행할 때 보면, 여러분이 내는 소득세는 국세인 '소득세'와 지방세인 '지방소득세'로 나뉘어져 있다.)`의 비율을 8:2에서 7:3 수준으로 조정한다던가, 지방공무원의 인사제도에 중앙정부가 개입할 여지를 줄인다던가, 지방예산 편성 과정에 주민제안이 반드시 들어가도록 하는 '주민참여예산' 제도를 전국적으로 시행하는 등의 내용이 포함된다. 이러한 조치는 각 지방마다 행정부·의회와 주민자치의 역량에 따라 매우 긍정적이거나 부정적인 상황을 만들 것이라서, 실제 입법과정에서 오랜 토론을 거칠 것이다.
 
 
 #### 자, 예산안 게임을 시작하지
 국회에서는 매년 11~ 12월마다 예산안 통과를 놓고 정당 차원의 줄다리기를 한다. 집권당은 1월이 넘어가기 전에 예산안을 반드시 통과시키려고 하고, 다른 당들은 이를 협상카드로 삼아서 자신들이 요구하는 특정 법안을 통과시키거나 특정 정책 예산을 증액/삭감하도록 요구하기 때문이다. 과거 국회에서는 예산안 협상에서 파워를 발휘할 정도로 규모가 큰 정당이 2개(민주당계 정당과 보수주류 정당) 뿐이었으므로 이 협상과 갈등이 매우 길어졌다. 
 
-그러나 2016-20년 국회는 예산안 합의에 참여할 수 있는 15~ 40여 석 규모의 제3정당(국민의당, 바른정당, 바른미래당, 민주평화당, 대안신당 등)이 등장해서, 협상을 통해 각 당이 연합하여 안정적인 과반수 동의를 만들곤 했다. 2019년도 예산안이 더불어민주당-자유한국당의 동의로 통과되었고, 2020년도 예산안은 더불어민주당-바른미래당-대안신당-민주평화당-정의당의 동의로 통과되었다. 이 과정을 거쳐 <u>예산이 그나마 빠르게 통과되는(2016-20 국회에서 예산안 처리가 매해 12월 10일을 넘긴 적은 없었다. 반대로, 2012-16 국회에서는 2013, 2014년도 예산안이 각각 연도를 넘겨서 1월 1일에 통과되었다.)</u> 유의미한 기록을 남겼다. 2020년 총선 이후 구성될 국회가 예산안을 협상하고 통과시키는 과정 역시, 각 정당 의석수에 따른 국회 구성에 따라 영향을 많이 받을 것이다.
+그러나 2016-20년 국회는 예산안 합의에 참여할 수 있는 15~ 40여 석 규모의 제3정당(국민의당, 바른정당, 바른미래당, 민주평화당, 대안신당 등)이 등장해서, 협상을 통해 각 당이 연합하여 안정적인 과반수 동의를 만들곤 했다. 2019년도 예산안이 더불어민주당-자유한국당의 동의로 통과되었고, 2020년도 예산안은 더불어민주당-바른미래당-대안신당-민주평화당-정의당의 동의로 통과되었다. 이 과정을 거쳐 `예산이 그나마 빠르게 통과되는(2016-20 국회에서 예산안 처리가 매해 12월 10일을 넘긴 적은 없었다. 반대로, 2012-16 국회에서는 2013, 2014년도 예산안이 각각 연도를 넘겨서 1월 1일에 통과되었다.)` 유의미한 기록을 남겼다. 2020년 총선 이후 구성될 국회가 예산안을 협상하고 통과시키는 과정 역시, 각 정당 의석수에 따른 국회 구성에 따라 영향을 많이 받을 것이다.
 
 #### 내 난방비! 내 마스크!
 앞서 말했듯 중앙정부의 1년 예산은 500조 원에 이르고, 이를 전부 꼼꼼히 검토하고 토론하는 것은 300명 뿐인 의원들에게 물리적으로 불가능하다. 따라서 예산심사 과정에서 몇십 초 안에 검토를 끝내고 정리하거나, 각 정당 지도부의 정치협상 과정에서 여러 쟁점법안과 함께 묶어서 합의처리하는 내용이 상당히 많다. 문제는, 이 과정에서 전혀 예상치 못한 엉뚱한 예산삭감이 일어난다는 점이다. 삭감된 예산에 대한 비판은 예산안이 국회를 통과하는 12월 말 ~  1월 초에 
@@ -137,7 +137,7 @@
 #### 서울 양천구 갑: 김용태
 
 #### 서울 관악구 갑, 대구 동구 을: 김성식, 유승민
-김성식과 유승민은 모두 국회에서 거물 중진이면서 경제 관련 정책통으로 알려졌다. 김성식은 1980년대 <u>한국노총(한국노동조합총연맹. 1987년 민주화 이전까지 한국 정부가 인정한 유일한 노동조합 연맹조직이다. 군사정권의 암묵적 인가를 받아 활동한 역사로 인해 정부와 기업에 지나치게 유화적이라는 비판을 받아서, 1990년 현재의 민주노총이 탄생하는 계기가 되었다. 한국노총은 계속해서 한국 최대규모의 노조연맹체였으나, 2018년 처음으로 조합원수에서 민주노총에게 추월당했다.)</u>정책기획실장과 진보적 민간 사회정책연구소로 알려진 한국사회과학연구소 연구원 출신이고, 유승민은 국책연구기관인 한국개발연구원에서 약 20년간 재직했다. 2016-2020 국회에서는 두 의원 모두 4년 동안 기재위에 소속되어, 우파적 관점을 담았지만 개혁적이며 전문적으로 핵심을 짚는 것만은 분명한, 그런 질의들을 많이 남긴다. 두 의원은 모두 2000년대에 한나라당(보수주류 정당)에서 소장파 역할을 하고, 공천에서 배제당하거나 당 쇄신을 요구하며 자의 반 타의 반으로 보수주류 정당의 핵심에서 밀려났다. 2010년대 들어 둘 다 바른미래당에 함께 몸담았으나, 그 이후의 정치계보가 갈라져버렸다. 학생운동과 노동조합 경력을 가진 김성식은 안철수와 함께 (민주당계 정당이라고 볼 수도 있는) 국민의당을 창당했기에, 이제는 민주당계 정당 내의 중도보수 계통에 속했다고도 볼 수 있다. 그러나 아버지 <u>유수호(유수호는 1988~ 96년에 대구 중구에서 국회의원으로 당선되었고, 민주정의당-민주자유당과 자유민주연합에 소속되었다.)</u>가 보수주류 정당 소속이었고 본인도 연구자 생활을 계속 했던 유승민은, 당을 새로 만들지언정 그래도 우파정당 계통 안에서 정책적 목소리를 내고 있다. 
+김성식과 유승민은 모두 국회에서 거물 중진이면서 경제 관련 정책통으로 알려졌다. 김성식은 1980년대 `한국노총(한국노동조합총연맹. 1987년 민주화 이전까지 한국 정부가 인정한 유일한 노동조합 연맹조직이다. 군사정권의 암묵적 인가를 받아 활동한 역사로 인해 정부와 기업에 지나치게 유화적이라는 비판을 받아서, 1990년 현재의 민주노총이 탄생하는 계기가 되었다. 한국노총은 계속해서 한국 최대규모의 노조연맹체였으나, 2018년 처음으로 조합원수에서 민주노총에게 추월당했다.)`정책기획실장과 진보적 민간 사회정책연구소로 알려진 한국사회과학연구소 연구원 출신이고, 유승민은 국책연구기관인 한국개발연구원에서 약 20년간 재직했다. 2016-2020 국회에서는 두 의원 모두 4년 동안 기재위에 소속되어, 우파적 관점을 담았지만 개혁적이며 전문적으로 핵심을 짚는 것만은 분명한, 그런 질의들을 많이 남긴다. 두 의원은 모두 2000년대에 한나라당(보수주류 정당)에서 소장파 역할을 하고, 공천에서 배제당하거나 당 쇄신을 요구하며 자의 반 타의 반으로 보수주류 정당의 핵심에서 밀려났다. 2010년대 들어 둘 다 바른미래당에 함께 몸담았으나, 그 이후의 정치계보가 갈라져버렸다. 학생운동과 노동조합 경력을 가진 김성식은 안철수와 함께 (민주당계 정당이라고 볼 수도 있는) 국민의당을 창당했기에, 이제는 민주당계 정당 내의 중도보수 계통에 속했다고도 볼 수 있다. 그러나 아버지 `유수호(유수호는 1988~ 96년에 대구 중구에서 국회의원으로 당선되었고, 민주정의당-민주자유당과 자유민주연합에 소속되었다.)`가 보수주류 정당 소속이었고 본인도 연구자 생활을 계속 했던 유승민은, 당을 새로 만들지언정 그래도 우파정당 계통 안에서 정책적 목소리를 내고 있다. 
 
 #### 경기 고양시 갑: 심상정
 
